made the scripts work for all the shelves (hard coded). fixed some fo the formatting issues, and now properly checks if the stock is too low. ignore the giant array in the script file, it will need to be replaced by a getter

--- a/Inventory/list-style.css
+++ b/Inventory/list-style.css
@@ -38,7 +38,7 @@
     border: 3px solid black;
 }
 
-#low-stock {
+#low-stock-container {
     display: flex;
     flex-direction: column;
     align-items: vertical;
@@ -73,7 +73,7 @@
 }
 */
 
-#low-stock a:hover {
+#low-stock-container a:hover {
     background-color: aliceblue;
     color: darkblue;
 }
