--- a/Inventory/location-style.css
+++ b/Inventory/location-style.css
@@ -14,17 +14,35 @@
     
 }
 
-.back-shelf a {
-    overflow: hidden;
-    background-color: white;
-    grid-column-end: span 5;
-    grid-row-end: span 3;
-    min-height: 90px;
-    border: 1px solid grey;
-    /* the columns are weird numbers because the boxes are weird sizes */
-
+.shelf a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.shelf div { /* box that the image is in */
+    width: 7.5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.shelf img { /* makes sure the image isn't too tall */
+    height: 40px;
+}
+
+.shelf p {
+    font-size: 15px;
+    text-align: center;
+}
+
+#low-stock {
+    border: 2px solid red;
+}
+
+
+
+/* specific shelves */
 .shelf .wide-container {
     grid-column-end: span 10;
 }
@@ -39,6 +57,17 @@
     grid-row-end: span 4;
     grid-column-end: span 16;
     min-height: 120px;
+}
+
+.back-shelf a {
+    overflow: hidden;
+    background-color: white;
+    grid-column-end: span 5;
+    grid-row-end: span 3;
+    min-height: 90px;
+    border: 1px solid grey;
+    /* the columns are weird numbers because the boxes are weird sizes */
+
 }
 
 .left-shelf {
